--- a/styles/parallax.css
+++ b/styles/parallax.css
@@ -163,6 +163,6 @@
     }
 
     .parallax_group {
-        height: 80vh;
+        height: 70vh;
     }
 }
